--- a/translation/dest/dgt/fa-IR.xml
+++ b/translation/dest/dgt/fa-IR.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+  <string name="dgtBoard">تخته DGT</string>
+  <string name="lichessAndDgt">لیچس و DGT</string>
+  <string name="dgtBoardRequirements">پیش‌نیازهای تخته DGT</string>
+  <string name="dgtBoardLimitations">ملزومات تخته DGT</string>
+  <string name="thisPageAllowsConnectingDgtBoard">این صفحه به شما اجازه می‌دهد تخته DGT خود را به لیچس متصل کنید و از آن برای انجام بازی‌ها استفاده کنید.</string>
+  <string name="toConnectTheDgtBoard">برای متصل شدن به تخته الکترونیکی DGT لازم است %s را نصب کنید.</string>
+  <string name="downloadHere">شما می‌توانید نرم‌افزار را از اینجا بارگیری کنید: %s</string>
+  <string name="ifLiveChessRunningOnThisComputer">اگر %1$s در این رایانه در حال اجرا است، می‌توانید با %2$s اتصال خود را با آن بررسی کنید.</string>
+  <string name="openingThisLink">باز کردن این پیوند</string>
+  <string name="ifLiveChessRunningElsewhere">اگر %1$s روی دستگاه یا پورت دیگری در حال اجرا است، باید آدرس IP و پورت را در اینجا در %2$s تنظیم کنید.</string>
+  <string name="configurationSection">بخش پیکربندی</string>
   <string name="reloadThisPage">بارگذاری مجدد صفحه</string>
+  <string name="dgtConfigure">DGT - پیکربندی</string>
   <string name="lichessConnectivity">اتصال به لیچس</string>
+  <string name="clickToGenerateOne">برای تولید یکی، اینجا کلیک کنید</string>
+  <string name="useWebSocketUrl">از «%1$s» استفاده کنید، مگر اینکه %2$s روی دستگاه یا درگاه دیگری اجرا می‌شود.</string>
   <string name="textToSpeech">متن به گفتار</string>
 </resources>
