New Crowdin updates (#15435)
* New translations: site.xml (Persian)

* New translations: site.xml (Chuvash)

* New translations: puzzle.xml (Danish)

* New translations: site.xml (Danish)

* New translations: site.xml (Danish)

* New translations: lag.xml (Russian)

* New translations: faq.xml (Bosnian)

* New translations: faq.xml (Bosnian)

* New translations: study.xml (Bosnian)

* New translations: dgt.xml (Bosnian)

* New translations: voicecommands.xml (Bosnian)

* New translations: onboarding.xml (Bosnian)

* New translations: appeal.xml (Bosnian)

* New translations: appeal.xml (Swedish)

--- a/translation/dest/site/da-DK.xml
+++ b/translation/dest/site/da-DK.xml
@@ -115,7 +115,7 @@
   <string name="realtimeReplay">Realtid</string>
   <string name="byCPL">CBT</string>
   <string name="openStudy">Åben studie</string>
-  <string name="enable">Aktiver</string>
+  <string name="enable">Aktivér</string>
   <string name="bestMoveArrow">Bedste træk pil</string>
   <string name="showVariationArrows">Vis variantpile</string>
   <string name="evaluationGauge">Evalueringsindikator</string>
@@ -786,8 +786,8 @@
   <string name="yourScore">Din score: %s</string>
   <string name="language">Sprog</string>
   <string name="background">Baggrund</string>
-  <string name="light">Lyst</string>
-  <string name="dark">Mørkt</string>
+  <string name="light">Lys</string>
+  <string name="dark">Mørk</string>
   <string name="transparent">Gennemsigtigt</string>
   <string name="deviceTheme">Enhedstema</string>
   <string name="backgroundImageUrl">Baggrundsbillede URL:</string>
