--- a/translation/dest/arena/ko-KR.xml
+++ b/translation/dest/arena/ko-KR.xml
@@ -55,11 +55,23 @@
   <string name="allowChatHelp">플레이어가 채팅방에서 토론할 수 있습니다</string>
   <string name="arenaStreaks">아레나 연승</string>
   <string name="arenaStreaksHelp">2승 이후 추가로 연승을 하면 2점이 아니라 4점을 얻습니다.</string>
-  <string name="noBerserkAllowed">버서크 모드 허용 안함</string>
+  <string name="noBerserkAllowed">버서크 모드 허용 안 함</string>
   <string name="noArenaStreaks">아레나 연승 없음</string>
   <string name="averagePerformance">평균 성과</string>
   <string name="averageScore">평균 점수</string>
   <string name="myTournaments">내 토너먼트</string>
+  <string name="editTournament">토너먼트 편집하기</string>
+  <string name="editTeamBattle">팀 배틀 편집하기</string>
   <string name="defender" comment="In this context, this is the current holder of a shield trophy, who is defending their trophy in the next shield tournament of that variant. https://lichess.org/tournament/shields">타이틀 보유자</string>
+  <string name="pickYourTeam">팀을 고르세요</string>
+  <string name="youMustJoinOneOfTheseTeamsToParticipate">참여하기 위해서는 이 팀 중 하나에 가입해야 합니다!</string>
+  <string name="created">생성됨</string>
+  <string name="stats">정보</string>
+  <string name="tournamentStats">토너먼트 정보</string>
+  <string name="rankAvgHelp">백분위 순위는 말 그대로 순위의 백분율입니다. 즉, 백분위 순위는 낮을수록 더 높은 순위를 의미합니다. 
+
+예를 들어, 100명의 참가자가 참여하는 토너먼트에서 3위를 차지하면 3%가 되고, 1000명의 참가자가 참여하는 토너먼트에서 10위를 차지하면 1%가 됩니다.</string>
+  <string name="total">합계</string>
+  <string name="rankAvg" comment="Please see the tournament stats page for an explanation (shown in screenshot). Example here:  https://lichess.org/@/Assios/tournaments/chart">백분위 순위</string>
   <string name="onlyTitled">타이틀 플레이어만</string>
 </resources>
