--- a/translation/dest/site/si-LK.xml
+++ b/translation/dest/site/si-LK.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="playWithAFriend">මිතුරෙකු හා ක්‍රීඩා කරන්න</string>
+  <string name="playWithAFriend">යහළුවෙකු සමඟ ක්‍රීඩා කරන්න</string>
   <string name="playWithTheMachine">පරිගණකය සමඟ ක්‍රීඩා කරන්න</string>
   <string name="toInviteSomeoneToPlayGiveThisUrl">ක්‍රීඩා කිරීමට යමෙකුට ආරාධනා කිරීමට, මෙම URL එක දෙන්න</string>
   <string name="gameOver">තරගය අවසන්</string>
@@ -633,4 +633,19 @@ You are playing chess.</string>
   <string name="simulHostExtraTime">අතිරේක ආරම්භක ඔරලෝසු කාලය සත්කාරකත්වය</string>
   <string name="simulAddExtraTimePerPlayer">සිමියුලයට සම්බන්ධ වන එක් එක් ක්‍රීඩකයා සඳහා ඔබේ ඔරලෝසුවට ආරම්භක වේලාව එක් කරන්න.</string>
   <string name="simulHostExtraTimePerPlayer">සත්කාරකයාට​ බැගින් ලැබෙන​ එක් ක්‍රීඩකයෙකුට අමතර ඔරලෝසු කාලය</string>
+  <string name="lichessTournaments">Lichess tournaments</string>
+  <string name="tournamentFAQ">තරඟාවලිය FAQ</string>
+  <string name="timeBeforeTournamentStarts">තරඟාවලිය</string>
+  <string name="accuracy">නිවරදිතවය</string>
+  <string name="keyboardShortcuts">යතුරු පුවරු කෙටි පිවිසුම්</string>
+  <string name="keyMoveBackwardOrForward">ඉස්සරහට/පිටුපසට අදින්න</string>
+  <string name="keyGoToStartOrEnd">පටන් ගැනීමට/අවසානයට යන්න</string>
+  <string name="keyRequestComputerAnalysis">විශ්ලේෂණය ඉල්ලුම් කරන්න</string>
+  <string name="keyNextLearnFromYourMistakes">ඊලඟට (ඔබේ වැරදීම්වලින් ඉගෙන ගන්න)</string>
+  <string name="keyNextBlunder">ඊලඟ වරද</string>
+  <string name="keyNextMistake">ඊලඟ වැරැද්ද</string>
+  <string name="keyNextInaccuracy">ඊලඟ අතපසු වීම</string>
+  <string name="keyPreviousBranch">පෙර ශාඛාව</string>
+  <string name="weeklyPerfTypeRatingDistribution">සතිපතා %s ශ්‍රේණි බෙදා හැරීම</string>
+  <string name="pieceSet">ඉත්තන් පෙළ</string>
 </resources>
