--- a/translation/source/site.xml
+++ b/translation/source/site.xml
@@ -70,6 +70,8 @@
   <string name="promoteVariation">Promote variation</string>
   <string name="makeMainLine">Make mainline</string>
   <string name="deleteFromHere">Delete from here</string>
+  <string name="collapseVariations">Collapse variations</string>
+  <string name="expandVariations">Expand variations</string>
   <string name="forceVariation">Force variation</string>
   <string name="copyVariationPgn">Copy variation PGN</string>
   <string name="move">Move</string>
