--- a/translation/source/broadcast.xml
+++ b/translation/source/broadcast.xml
@@ -23,7 +23,7 @@
   <string name="tournamentDescription">Short tournament description</string>
   <string name="fullDescription">Full tournament description</string>
   <string name="fullDescriptionHelp">Optional long description of the tournament. %1$s is available. Length must be less than %2$s characters.</string>
-  <string name="sourceUrl">Source URL, or game IDs</string>
+  <string name="sourceSingleUrl">PGN Source URL</string>
   <string name="sourceUrlHelp">URL that Lichess will check to get PGN updates. It must be publicly accessible from the Internet.</string>
   <string name="sourceGameIds">Up to 64 Lichess game IDs, separated by spaces.</string>
   <string name="startDate">Start date in your own timezone</string>
